--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -51,18 +51,22 @@
 //$red-200: #e94c4c;
 //$red-300: #dd2e2e;
 
+$in3-primary: #FD8852;
+$in3-secondary: #56BFC3;
+$in3-tertiary: #162D3C;
+
 //$body-background-color: $white;
-//$sidebar-color: $grey-lt-000;
+$sidebar-color: $in3-secondary;//$grey-lt-000;
 //$search-background-color: $white;
 //$table-background-color: $white;
 //$code-background-color: $grey-lt-000;
 
 //$body-text-color: $grey-dk-100;
-//$body-heading-color: $grey-dk-300;
+$body-heading-color: $in3-tertiary;//$grey-dk-300;
 //$search-result-preview-color: $grey-dk-000;
-//$nav-child-link-color: $grey-dk-100;
-//$link-color: $purple-000;
-//$btn-primary-color: $purple-100;
+$nav-child-link-color: $in3-tertiary;// $grey-dk-100;
+$link-color: $in3-primary;
+$btn-primary-color: $in3-primary;
 //$base-button-color: #f7f7f7;
 
 ////
