--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -56,17 +56,17 @@ $in3-secondary: #56BFC3;
 $in3-tertiary: #162D3C;
 
 //$body-background-color: $white;
-$sidebar-color: $in3-secondary;//$grey-lt-000;
+$sidebar-color: $in3-tertiary;//$grey-lt-000;
 //$search-background-color: $white;
 //$table-background-color: $white;
 //$code-background-color: $grey-lt-000;
 
 //$body-text-color: $grey-dk-100;
-$body-heading-color: $in3-tertiary;//$grey-dk-300;
+$body-heading-color: $in3-primary;//$grey-dk-300;
 //$search-result-preview-color: $grey-dk-000;
-$nav-child-link-color: $in3-tertiary;// $grey-dk-100;
-$link-color: $in3-primary;
-$btn-primary-color: $in3-primary;
+$nav-child-link-color: $in3-primary;// $grey-dk-100;
+$link-color: $in3-secondary;
+$btn-primary-color: $in3-secondary;
 //$base-button-color: #f7f7f7;
 
 ////
