--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -62,11 +62,11 @@ $sidebar-color: $in3-tertiary;//$grey-lt-000;
 //$code-background-color: $grey-lt-000;
 
 //$body-text-color: $grey-dk-100;
-$body-heading-color: $in3-primary;//$grey-dk-300;
+$body-heading-color: $in3-tertiary;//$grey-dk-300;
 //$search-result-preview-color: $grey-dk-000;
-$nav-child-link-color: $in3-primary;// $grey-dk-100;
-$link-color: $in3-secondary;
-$btn-primary-color: $in3-secondary;
+$nav-child-link-color: $in3-secondary;// $grey-dk-100;
+$link-color: $in3-primary;
+$btn-primary-color: $in3-primary;
 //$base-button-color: #f7f7f7;
 
 ////
