--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -54,9 +54,10 @@
 $in3-primary: #FD8852;
 $in3-secondary: #56BFC3;
 $in3-tertiary: #162D3C;
+$in3-tertiary-light: #162D3C22;
 
 //$body-background-color: $white;
-$sidebar-color: $in3-tertiary;//$grey-lt-000;
+$sidebar-color: $in3-tertiary-light;//$grey-lt-000;
 //$search-background-color: $white;
 //$table-background-color: $white;
 //$code-background-color: $grey-lt-000;
