--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -1,20 +1,34 @@
 ---
 layout: default
 ---
+<h1>{{ page.title }}</h1>
+
+{% if page.images %}
+            <ul>
+              {% for image in page.images %}
+                    <li>
+                    <img src="{{ site.url | append: '/img/'' | append: image}}" />
+                    </li>
+              {% endfor %}
+            </ul>
+{% endif %}
 
 {{ content }}
 
 {% if page.using %}
             <hr>
-            <h2 class="text-delta">Table of contents</h2>
+            <h2 class="text-delta">Related Modules</h2>
             {% assign related_pages = site.pages | sort:"nav_order" %}
             <ul>
               {% for rel_page in related_pages %}
                     {% if page.using contains rel_page.id %}
                     <li>
+                        {% if rel_page.images %}
+                            <img src="{{ site.url | append: '/img/'' | append: rel_page.images[0]}}" />
+                    {% endif %}
                     <a href="{{ rel_page.url | absolute_url }}">{{ rel_page.title }}</a>{% if rel_page.summary %} - {{ rel_page.summary }}{% endif %}
                     </li>
                     {% endif %}
               {% endfor %}
             </ul>
-          {% endif %}
+{% endif %}
