--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -14,7 +14,7 @@ layout: default
 {% endif %}
 
 
-{% include carousel.html height="50" unit="%" duration="7"%}
+{% include carousel.html height="50" unit="%" duration="7" images=page.images %}
 
 {{ content }}
 
