--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -27,7 +27,7 @@
         <div class="carousel__track">
           <ul>
             {% for item in include.images %}
-            <li class="carousel__slide" style="background-image: url('{{ item.image }}');"></li>
+            <li class="carousel__slide" style="background-image: url('{{ item }}');"></li>
             {% endfor %}
           </ul>
         </div>
