--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -1,6 +1,6 @@
 {% assign letterstring = "a,b,c,d,e,f,g,h,i,j,k,l,m,n" %}
 {% assign letters = letterstring | split: ',' %}
-{% assign loops = include.images | size %}
+{% assign loops = include.pages | size | divice_by: include.count | floor | plus: 1 %}
 
 
 <div class="carousel__holder">
@@ -31,9 +31,11 @@
             {% for  i in (1..loops) %}
             {% assign offset = forloop.index0 | times: include.count %}
             <li class="carousel__slide">
-                {%for image in include.images offset: offset limit: include.count %}
-                  <img src="{{ site.url }}{{ site.baseurl }}/img/{{ image }}" />
-                {% endfor %}
+                <div class="card-deck">
+                    {%for currentpage in include.pages offset: offset limit: include.count %}
+                        {% include card.html url="currentpage.url" title="currentpage.title" image="currentpage.images[0]" %}
+                    {% endfor %}
+                </div>
             </li>
             {% endfor %}
           </ul>
