--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -14,24 +14,12 @@ layout: default
 {% endif %}
 
 
-{% include carousel.html height="50" unit="%" duration="7" images=page.images count="2" %}
-
 {{ content }}
 
 {% if page.using %}
             <hr>
             <h2 class="text-delta">Related Modules</h2>
-            {% assign related_pages = site.pages | sort:"nav_order" %}
-            <ul>
-              {% for rel_page in related_pages %}
-                    {% if page.using contains rel_page.id %}
-                    <li>
-                        {% if rel_page.images %}
-                        <img src="{{ site.url }}{{ site.baseurl }}/img/{{ rel_page.images[0] }}" />
-                    {% endif %}
-                    <a href="{{ rel_page.url | absolute_url }}">{{ rel_page.title }}</a>{% if rel_page.summary %} - {{ rel_page.summary }}{% endif %}
-                    </li>
-                    {% endif %}
-              {% endfor %}
-            </ul>
+            {% assign possible_related_pages = site.pages | sort:"nav_order" %}
+            {% assign related_pages = site.pages | where_exp: "item", "page.using contains item.id" %}
+            {% include carousel.html height="50" unit="%" duration="7" images=related_pages count="2" %}
 {% endif %}
