--- a/assets/css/just-the-docs.scss
+++ b/assets/css/just-the-docs.scss
@@ -38,6 +38,7 @@ $logo: "{{ site.logo | absolute_url }}";
 @import "./base";
 @import "./layout";
 @import "./content";
+@import "./card";
 @import "./navigation";
 @import "./typography";
 @import "./labels";
