--- a/assets/css/just-the-docs.scss
+++ b/assets/css/just-the-docs.scss
@@ -38,13 +38,13 @@ $logo: "{{ site.logo | absolute_url }}";
 @import "./base";
 @import "./layout";
 @import "./content";
-@import "./card";
 @import "./navigation";
 @import "./typography";
 @import "./labels";
-@import "./buttons";
+//@import "./buttons";
 @import "./search";
 @import "./tables";
 @import "./code";
 @import "./utilities/utilities";
 @import "./overrides";
+@import "./materialize";
