--- a/assets/css/dark-mode-preview.scss
+++ b/assets/css/dark-mode-preview.scss
@@ -38,6 +38,7 @@ $logo: "{{ site.logo | absolute_url }}";
 @import "./tables";
 @import "./code";
 @import "./utilities/utilities";
+@import "./materialize";
 
 //
 // Import custom overrides
