style bootstrap shaodw gradient

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -51,26 +51,28 @@
 //$red-200: #e94c4c;
 //$red-300: #dd2e2e;
 
-$in3-primary: #FD8852;
-//$in3-secondary: #56BFC3;
-$in3-secondary: #162D3C;
-$in3-secondary-light: #162D3C22;
+//bootstrap
+$primary: #FD8852 !default;
+//$secondary: #56BFC3;
+$secondary: #162D3C !default;
+$secondary-light: #162D3C22;
+$enable-shadows: true !default;
+$enable-gradients: true !default;
 
-$primary:       $in3-primary !default;
-$secondary:     $in3-secondary !default;
+
 
 //$body-background-color: $white;
-$sidebar-color: $in3-secondary-light;//$grey-lt-000;
+$sidebar-color: $secondary-light;//$grey-lt-000;
 //$search-background-color: $white;
 //$table-background-color: $white;
 //$code-background-color: $grey-lt-000;
 
 //$body-text-color: $grey-dk-100;
-$body-heading-color: $in3-secondary;//$grey-dk-300;
+$body-heading-color: $secondary;//$grey-dk-300;
 //$search-result-preview-color: $grey-dk-000;
-$nav-child-link-color: $in3-secondary;// $grey-dk-100;
-$link-color: $in3-primary;
-$btn-primary-color: $in3-primary;
+$nav-child-link-color: $secondary;// $grey-dk-100;
+$link-color: $primary;
+$btn-primary-color: $primary;
 //$base-button-color: #f7f7f7;
 
 ////
