--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -1,29 +1,32 @@
-{% assign letterstring = "a,b,c,d,e,f,g,h,i,j,k,l,m,n" %}
-{% assign letters = letterstring | split: ',' %}
 {% assign loops = include.pages | size | divice_by: include.count | ceil %}
+{% assign id = carousel %}
+{% if include.id %}
+    {% assign id = include.id %}
+{% endif %}
 
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<div id="{{ id }}" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
         {% for i in (1..loops) %}
-        <li data-target="#carouselExampleIndicators" data-slide-to="{{ forloop.first }}" {% if forloop.first %}class="active"{% endif %}></li>
+        <li data-target="#{{ id }}" data-slide-to="{{ forloop.first }}" {% if forloop.first %}class="active"{% endif %}></li>
         {% endfor %}
     </ol>
     <div class="carousel-inner">
         {% for i in (1..loops) %}
         {% assign offset = forloop.index0 | times: include.count %}
-
         <div class="carousel-item {% if forloop.first %}active{% endif %}">
+            <div class="card-deck">
             {%for p in include.pages offset: offset limit: include.count %}
                 {% include card.html title=p.title url=p.url image=p.images  %}
             {% endfor %}
+            </div>
       </div>
       {% endfor %}
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <a class="carousel-control-prev" href="#{{ id }}" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <a class="carousel-control-next" href="#{{ id }}" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
