--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -1,15 +1,10 @@
-{% assign loops = include.pages | size | divice_by: include.count | ceil %}
+{% assign loops = include.pages | size | divided_by: include.count | ceil %}
 {% assign id = carousel %}
 {% if include.id %}
     {% assign id = include.id %}
 {% endif %}
 
 <div id="{{ id }}" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-        {% for i in (1..loops) %}
-        <li data-target="#{{ id }}" data-slide-to="{{ forloop.first }}" {% if forloop.first %}class="active"{% endif %}></li>
-        {% endfor %}
-    </ol>
     <div class="carousel-inner">
         {% for i in (1..loops) %}
         {% assign offset = forloop.index0 | times: include.count %}
@@ -22,12 +17,25 @@
       </div>
       {% endfor %}
     </div>
-    <a class="carousel-control-prev" href="#{{ id }}" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#{{ id }}" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
   </div>
+  {% if loops > 1 %}
+  <ul class="pagination">
+    <li class="page-item">
+      <a class="page-link" href="#{{ id }}" data-slide="prev">
+        <span aria-hidden="true">&laquo;</span>
+      </a>
+    </li>
+    {% for i in (1..loops) %}
+    <li class="page-item">
+        <a data-target="#{{ id }}" href="#" data-slide-to="{{ forloop.index0 }}" class="page-link">
+              {{ forloop.index }}
+          </a>
+      </li>
+    {% endfor %}
+    <li class="page-item">
+      <a class="page-link"  href="#{{ id }}" data-slide="next">
+        <span aria-hidden="true">&raquo;</span>
+      </a>
+    </li>
+  </ul>
+  {% endif %}
