--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -1,4 +1,5 @@
-{% assign loops = include.pages | size | divided_by: include.count | ceil %}
+{% assign count = include.count | times: 1.0 %}
+{% assign loops = include.pages | size | divided_by: count | ceil %}
 {% assign id = carousel %}
 {% if include.id %}
     {% assign id = include.id %}
