--- a/_includes/card.html
+++ b/_includes/card.html
@@ -1,8 +1,8 @@
 <div class="card">
     {% if include.url %}
     {% if include.image %}
-    <a href="{{ include.url | absolute_url }}">
-        <img src="{{ site.url }}{{ site.baseurl }}/img/{{ include.image[0] }}" class="card-img-top" alt="{{ include.title }}" />
+    <a href="{{ include.url | absolute_url }}"  style="height:50%; width:100%;overflow:hidden;">
+        <img src="{{ site.url }}{{ site.baseurl }}/img/{{ include.image[0] }}" class="img-fluid card-img-top" alt="{{ include.title }}" />
     </a>
     {% endif %}
     <div class="card-body">
