--- a/_includes/card.html
+++ b/_includes/card.html
@@ -1,6 +1,6 @@
 <div class="card">
     {% if include.url %}
-    <a href="{{ include.url | absolute_url }}" class="card-img-top-carousel">
+    <a href="{{ include.url | absolute_url }}">
         {% if include.image %}
         <img src="{{ site.url }}{{ site.baseurl }}/img/{{ include.image[0] }}" class="img-fluid card-img-top" alt="{{ include.title }}" />
         {% endif %}
