--- a/_includes/card.html
+++ b/_includes/card.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card shadow-sm mb-5">
     {% if include.url %}
     <a href="{{ include.url | absolute_url }}">
         {% if include.image %}
@@ -10,7 +10,6 @@
         {% if include.text != nil %}
             <p class="card-text">{{ include.text }}</p>
         {% endif %}
-        <a href="{{ include.url | absolute_url }}" class="btn btn-primary">Show</a>
     </div>
     {% endif %}
 </div>
