--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -1,11 +1,19 @@
 ---
 layout: default
 ---
-{% if page.images %}
-    {% include image_carousel.html images=page.images count="3" id="imagecarousel" %}
-{% endif %}
 
-<h1>{{ page.title }}</h1>
+<div class="row">
+    <div class="col">
+        <h1>{{ page.title }}</h1>
+        {{ page.summary }}
+    </div>
+    {% if page.image %}
+    <div class="col">
+        <img src="{{ site.url }}{{ site.baseurl }}/img/{{ image }}" class="card-img-top" />
+    </div>
+    {% endif %}
+</div>
+
 
 {% if page.using %}
     {% assign related_pages = site.pages | where_exp: "item", "page.using contains item.id" %}
