--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -9,7 +9,7 @@ layout: default
     </div>
     {% if page.image %}
     <div class="col">
-        <img src="{{ site.url }}{{ site.baseurl }}/img/{{ image }}" class="card-img-top" />
+        <img src="{{ site.url }}{{ site.baseurl }}/img/{{ page.image }}" class="card-img-top" />
     </div>
     {% endif %}
 </div>
