--- a/_includes/page_carousel.html
+++ b/_includes/page_carousel.html
@@ -6,7 +6,7 @@
 {% endif %}
 
 {% if loops > 1 %}
-<ul class="pagination">
+<ul class="pagination pagination-sm">
   <li class="page-item">
     <a class="page-link" href="#{{ id }}" data-slide="prev">
       <span aria-hidden="true">&laquo;</span>
