--- a/_includes/card.html
+++ b/_includes/card.html
@@ -5,7 +5,7 @@
         <img src="{{ site.url }}{{ site.baseurl }}/img/{{ include.image }}" class="img-fluid card-img-top" alt="{{ include.title }}" />
         {% endif %}
     </a>
-    <div class="card-image-top"> 
+    <div class="card-image-overlay"> 
         <h4 class="card-title">{{ include.title }}</h4>
     </div>
     {% endif %}
