--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,7 +10,9 @@
         {% assign node_url_parts_size = node_url_parts | size %}
         {% assign filename = node_url_parts | last %}
         {% if url_parts_size == node_url_parts_size and filename != 'index.html' %}
-          <li><a href='{{node.url}}'>{{node.title}}</a></li>
+          <li class="navigation-list-item {% if page.url == node.url %}active{% endif %} navigation-list-item-{{ url_parts_size }}">
+            <a href='{{node.url | absolute_url }}'>{{node.title}}</a>
+          </li>
         {% endif %}
       {% endif %}
     {% endfor %}
