--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,7 +4,7 @@
 {% assign base_url = page.url | replace: rm %}
 <nav role="navigation" aria-label="Main navigatino">
   <ul class="navigation-list">
-    {% assign pages_list = site.html_pages | sort:"nav_order" %}
+    {% assign pages_list = site.pages | sort:"nav_order" %}
     {% for node in pages_list %}
       {% if node.url contains base_url %}
         {% assign node_url_parts = node.url | split: '/' %}
