--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,6 +2,7 @@
 {% assign url_parts_size = url_parts | size %}
 {% assign rm = url_parts | last %}
 {% assign base_url = page.url | replace: rm %}
+{{ base_url }}-{{ rm }}-{{url_parts_size}}-{{url_parts}}
 <nav role="navigation" aria-label="Main navigatino">
   <ul class="navigation-list">
     {% for node in site.pages %}
