--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,6 +6,7 @@
 <nav role="navigation" aria-label="Main navigatino">
   <ul class="navigation-list">
     {% for node in site.pages %}
+    {{node.url}}
       {% if node.url contains base_url %}
         {% assign node_url_parts = node.url | split: '/' %}
         {% assign node_url_parts_size = node_url_parts | size %}
