--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 {% assign url_parts = page.url | split: '/' %}
 {% assign url_parts_size = url_parts | size %}
-{% assign rm = '/' | concat: url_parts | last %}
+{% assign rm = '/' | append: url_parts | last %}
 {% assign base_url = page.url | replace: rm %}
 {{ base_url }}-{{ rm }}-{{url_parts_size}}-{{url_parts}}
 <nav role="navigation" aria-label="Main navigatino">
